Fixed the problem not having the image in the center of the screen. Change to the css file, added a bit of a hack with MR's help. .item img {} was able to align the image to the center of the screen.
Height and width are currently set to percentages until updates.

--- a/farm2fork_otmd/static/css/style.css
+++ b/farm2fork_otmd/static/css/style.css
@@ -27,3 +27,9 @@
     text-align: center;
 }
 
+.item img {
+    margin:0 auto;
+    width: 25%;
+    height: 50%;
+}
+
